unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__AlternatePhone__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AlternatePhone__c</fullName>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>