unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__AlternateStreet__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AlternateStreet__c</fullName>
    <label>Alternate Street</label>
    <type>TextArea</type>
</CustomField>