unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__CloseTime__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CloseTime__c</fullName>
    <label>Close Time</label>
    <type>Time</type>
</CustomField>