unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Confirmed_By_Carrier__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Confirmed_By_Carrier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed By Carrier</label>
    <type>Checkbox</type>
</CustomField>