unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Customs_Certify__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Customs_Certify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customs Certify</label>
    <type>Checkbox</type>
</CustomField>