unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__DutiesPaymentType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DutiesPaymentType__c</fullName>
    <label>Duties/Taxes/Fees Payment Type</label>
    <length>12</length>
    <type>Text</type>
</CustomField>