unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__DutiesPayorAccount__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DutiesPayorAccount__c</fullName>
    <label>Duties/Taxes/Fees Payor Account</label>
    <length>12</length>
    <type>Text</type>
</CustomField>