unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Earliest_Delivery__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Earliest_Delivery__c</fullName>
    <label>Earliest Delivery</label>
    <type>DateTime</type>
</CustomField>