unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Earliest_Pickup__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Earliest_Pickup__c</fullName>
    <label>Earliest Pickup</label>
    <type>DateTime</type>
</CustomField>