unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__FreightPackingListEnclosed__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__FreightPackingListEnclosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Packing List Enclosed</label>
    <type>Checkbox</type>
</CustomField>