unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Hide_Sender_Address__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Hide_Sender_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Sender Address</label>
    <type>Checkbox</type>
</CustomField>