unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__IneligibleForMoneyBackGuarantee__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IneligibleForMoneyBackGuarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ineligible for Money Back Guarantee</label>
    <type>Checkbox</type>
</CustomField>