unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Latest_Delivery__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Latest_Delivery__c</fullName>
    <label>Latest Delivery</label>
    <type>DateTime</type>
</CustomField>