unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__ReadyTime__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ReadyTime__c</fullName>
    <label>Ready Time</label>
    <type>Time</type>
</CustomField>