unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__RecipientTaxIdType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__RecipientTaxIdType__c</fullName>
    <label>Recipient Tax ID Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>