unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__ReferenceBarCode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ReferenceBarCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference Bar Code</label>
    <type>Checkbox</type>
</CustomField>