unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Returned_To_Sender__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Returned_To_Sender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returned To Sender</label>
    <type>Checkbox</type>
</CustomField>