unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__SenderTaxId__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SenderTaxId__c</fullName>
    <label>Sender Tax ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>