unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__TotalRebates__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__TotalRebates__c</fullName>
    <label>Total Rebates</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>