unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__UseAlternateAddress__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__UseAlternateAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Alternate Address</label>
    <type>Checkbox</type>
</CustomField>