unpackaged/main/default/objects/zkmulti__MCShipmentInfo__c/fields/zkmulti__Validate_Address__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Validate_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Address</label>
    <type>Checkbox</type>
</CustomField>